[package]
name = "roblox_account_value"
description = "Webapp to calculate value of a roblox account"
version = "0.1.4"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s" # Tell `rustc` to optimize for small code size.
lto = true

[dependencies]
gloo = "0.11.0"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.77"
features = [
  'HtmlInputElement',
  'HtmlButtonElement',
  'HtmlDivElement',
  'Element',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlParagraphElement',
  'HtmlSpanElement',
  'HtmlAnchorElement',
  'DomTokenList',
  'Document',
  'Event',
]
